// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Layout : Header renders correctly 1`] = `
<header
  className="site-header siteHeader"
>
  <div
    className="container container"
  >
    <div
      className=""
      style={
        Object {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
          "transition": "height 0ms ease-in-out,opacity 0ms ease-in-out,background 0ms ease-in-out",
        }
      }
    >
      <div
        className="mobileMenu"
        style={
          Object {
            "minHeight": "0px",
          }
        }
        tabIndex="-1"
      >
        <nav
          className="js-disabled-block"
          role="navigation"
        >
          <ul
            aria-label="Main"
            className="mobile"
            role="menubar"
          >
            <li
              className="menuItem"
              role="none"
            >
              <div
                className="navLabel"
              >
                <a
                  href="/test-a"
                  onClick={[Function]}
                >
                  Test A
                </a>
                <button
                  aria-controls="menu--1"
                  aria-haspopup={true}
                  className="caret"
                  data-reach-menu-button=""
                  id="menu-button--menu"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    fill="none"
                    height="7"
                    viewBox="0 0 12 7"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.59523 6.56387C5.7446 6.71053 5.91203 6.7381 6.0001 6.7381C6.09838 6.7381 6.25421 6.71136 6.40443 6.56387L10.9015 1.76778C11.1074 1.5483 11.093 1.20669 10.8695 1.00471C10.6459 0.802637 10.298 0.817297 10.0924 1.03625L5.99993 5.40006L1.90754 1.03625C1.70151 0.816664 1.35357 0.802742 1.13034 1.00471C0.906907 1.20669 0.892512 1.5483 1.09823 1.76778L5.59523 6.56387Z"
                    />
                  </svg>
                  <span
                    className="a11y-only"
                  >
                    show menu for 
                    Test A
                  </span>
                </button>
              </div>
              <div
                data-reach-menu=""
                data-reach-menu-popover=""
                hidden={true}
              >
                <div
                  aria-labelledby="menu-button--menu"
                  className="header-sub-menu subMenu"
                  data-reach-menu-items=""
                  data-reach-menu-list=""
                  id="menu--1"
                  onKeyDown={[Function]}
                  tabIndex={-1}
                >
                  <div
                    role="none"
                    tabIndex={-1}
                  >
                    <a
                      className="sub-menu-link menuLink"
                      data-reach-menu-item=""
                      data-reach-menu-link=""
                      data-selected=""
                      data-valuetext=""
                      href="/contentful-a"
                      onClick={[Function]}
                      onDragStart={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Contentful a
                    </a>
                  </div>
                  <div
                    role="none"
                    tabIndex={-1}
                  >
                    <a
                      className="sub-menu-link menuLink"
                      data-reach-menu-item=""
                      data-reach-menu-link=""
                      data-selected=""
                      data-valuetext=""
                      href="/contentful-b"
                      onClick={[Function]}
                      onDragStart={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Contentful B
                    </a>
                  </div>
                </div>
              </div>
            </li>
            <li
              className="menuItem"
              role="none"
            >
              <div
                className="navLabel"
              >
                <a
                  href="/test-b"
                  onClick={[Function]}
                >
                  Test B
                </a>
              </div>
            </li>
          </ul>
        </nav>
        <div
          className="mobilePointer"
        />
      </div>
    </div>
    <div
      className="wrapper"
    >
      <div
        className="siteTitleContainer"
      >
        <div
          className="siteTitleInner"
        >
          <a
            className="projectLogo"
            href="/"
          >
            <img
              alt="The COVID Tracking Project"
              src="test-file-stub"
              width="176px"
            />
          </a>
        </div>
        =
        <div
          className="navContainer"
        >
          <button
            aria-expanded={false}
            className="mobileToggle"
            onClick={[Function]}
            type="button"
          >
            Menu
          </button>
          <nav
            className="js-disabled-block"
            role="navigation"
          >
            <ul
              aria-label="Main"
              className=""
              role="menubar"
            >
              <li
                className="menuItem"
                role="none"
              >
                <div
                  className="navLabel"
                >
                  <a
                    href="/test-a"
                    onClick={[Function]}
                  >
                    Test A
                  </a>
                  <button
                    aria-controls="menu--3"
                    aria-haspopup={true}
                    className="caret"
                    data-reach-menu-button=""
                    id="menu-button--menu"
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      fill="none"
                      height="7"
                      viewBox="0 0 12 7"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.59523 6.56387C5.7446 6.71053 5.91203 6.7381 6.0001 6.7381C6.09838 6.7381 6.25421 6.71136 6.40443 6.56387L10.9015 1.76778C11.1074 1.5483 11.093 1.20669 10.8695 1.00471C10.6459 0.802637 10.298 0.817297 10.0924 1.03625L5.99993 5.40006L1.90754 1.03625C1.70151 0.816664 1.35357 0.802742 1.13034 1.00471C0.906907 1.20669 0.892512 1.5483 1.09823 1.76778L5.59523 6.56387Z"
                      />
                    </svg>
                    <span
                      className="a11y-only"
                    >
                      show menu for 
                      Test A
                    </span>
                  </button>
                </div>
                <div
                  data-reach-menu=""
                  data-reach-menu-popover=""
                  hidden={true}
                >
                  <div
                    aria-labelledby="menu-button--menu"
                    className="header-sub-menu subMenu"
                    data-reach-menu-items=""
                    data-reach-menu-list=""
                    id="menu--3"
                    onKeyDown={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      role="none"
                      tabIndex={-1}
                    >
                      <a
                        className="sub-menu-link menuLink"
                        data-reach-menu-item=""
                        data-reach-menu-link=""
                        data-selected=""
                        data-valuetext=""
                        href="/contentful-a"
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                        role="menuitem"
                        tabIndex={-1}
                      >
                        Contentful a
                      </a>
                    </div>
                    <div
                      role="none"
                      tabIndex={-1}
                    >
                      <a
                        className="sub-menu-link menuLink"
                        data-reach-menu-item=""
                        data-reach-menu-link=""
                        data-selected=""
                        data-valuetext=""
                        href="/contentful-b"
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                        role="menuitem"
                        tabIndex={-1}
                      >
                        Contentful B
                      </a>
                    </div>
                  </div>
                </div>
              </li>
              <li
                className="menuItem"
                role="none"
              >
                <div
                  className="navLabel"
                >
                  <a
                    href="/test-b"
                    onClick={[Function]}
                  >
                    Test B
                  </a>
                </div>
              </li>
            </ul>
          </nav>
        </div>
      </div>
      <div
        className="atlanticBanner"
      >
        <span>
          At
        </span>
         
        <img
          alt="The Atlantic"
          src="test-file-stub"
        />
        <div />
      </div>
    </div>
    <div
      className="container container"
    >
      <div
        className="full"
      >
        <div
          className="titleSubnavContainer"
        >
          <div
            className="title"
          >
            <h1
              className="page-title pageTitle"
            >
              Sample title
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="shutdownBox"
  >
    <div
      className="container container"
    >
      <div
        className="full"
      >
        As of 
        <strong>
          March 7, 2021
        </strong>
         we are
         
        <a
          href="/analysis-updates/giving-thanks-and-looking-ahead-our-data-collection-work-is-done"
        >
          no longer collecting new data
        </a>
        .
         
        <a
          href="/analysis-updates/federal-covid-data-101-how-to-find-data"
        >
          Learn about available federal data
        </a>
        .
      </div>
    </div>
  </div>
</header>
`;

exports[`Components : Layout : Header renders correctly 2`] = `
<header
  className="site-header siteHeader noMargin"
>
  <div
    className="container container"
  >
    <div
      className=""
      style={
        Object {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
          "transition": "height 0ms ease-in-out,opacity 0ms ease-in-out,background 0ms ease-in-out",
        }
      }
    >
      <div
        className="mobileMenu"
        style={
          Object {
            "minHeight": "0px",
          }
        }
        tabIndex="-1"
      >
        <nav
          className="js-disabled-block"
          role="navigation"
        >
          <ul
            aria-label="Main"
            className="mobile"
            role="menubar"
          >
            <li
              className="menuItem"
              role="none"
            >
              <div
                className="navLabel"
              >
                <a
                  href="/test-a"
                  onClick={[Function]}
                >
                  Test A
                </a>
                <button
                  aria-controls="menu--9"
                  aria-haspopup={true}
                  className="caret"
                  data-reach-menu-button=""
                  id="menu-button--menu--9"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    fill="none"
                    height="7"
                    viewBox="0 0 12 7"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.59523 6.56387C5.7446 6.71053 5.91203 6.7381 6.0001 6.7381C6.09838 6.7381 6.25421 6.71136 6.40443 6.56387L10.9015 1.76778C11.1074 1.5483 11.093 1.20669 10.8695 1.00471C10.6459 0.802637 10.298 0.817297 10.0924 1.03625L5.99993 5.40006L1.90754 1.03625C1.70151 0.816664 1.35357 0.802742 1.13034 1.00471C0.906907 1.20669 0.892512 1.5483 1.09823 1.76778L5.59523 6.56387Z"
                    />
                  </svg>
                  <span
                    className="a11y-only"
                  >
                    show menu for 
                    Test A
                  </span>
                </button>
              </div>
              <div
                data-reach-menu=""
                data-reach-menu-popover=""
                hidden={true}
              >
                <div
                  aria-labelledby="menu-button--menu--9"
                  className="header-sub-menu subMenu"
                  data-reach-menu-items=""
                  data-reach-menu-list=""
                  id="menu--9"
                  onKeyDown={[Function]}
                  tabIndex={-1}
                >
                  <div
                    role="none"
                    tabIndex={-1}
                  >
                    <a
                      className="sub-menu-link menuLink"
                      data-reach-menu-item=""
                      data-reach-menu-link=""
                      data-selected=""
                      data-valuetext=""
                      href="/contentful-a"
                      onClick={[Function]}
                      onDragStart={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Contentful a
                    </a>
                  </div>
                  <div
                    role="none"
                    tabIndex={-1}
                  >
                    <a
                      className="sub-menu-link menuLink"
                      data-reach-menu-item=""
                      data-reach-menu-link=""
                      data-selected=""
                      data-valuetext=""
                      href="/contentful-b"
                      onClick={[Function]}
                      onDragStart={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Contentful B
                    </a>
                  </div>
                </div>
              </div>
            </li>
            <li
              className="menuItem"
              role="none"
            >
              <div
                className="navLabel"
              >
                <a
                  href="/test-b"
                  onClick={[Function]}
                >
                  Test B
                </a>
              </div>
            </li>
          </ul>
        </nav>
        <div
          className="mobilePointer"
        />
      </div>
    </div>
    <div
      className="wrapper"
    >
      <div
        className="siteTitleContainer"
      >
        <div
          className="siteTitleInner"
        >
          <a
            className="projectLogo"
            href="/"
          >
            <img
              alt="The COVID Tracking Project"
              src="test-file-stub"
              width="176px"
            />
          </a>
        </div>
        =
        <div
          className="navContainer"
        >
          <button
            aria-expanded={false}
            className="mobileToggle"
            onClick={[Function]}
            type="button"
          >
            Menu
          </button>
          <nav
            className="js-disabled-block"
            role="navigation"
          >
            <ul
              aria-label="Main"
              className=""
              role="menubar"
            >
              <li
                className="menuItem"
                role="none"
              >
                <div
                  className="navLabel"
                >
                  <a
                    href="/test-a"
                    onClick={[Function]}
                  >
                    Test A
                  </a>
                  <button
                    aria-controls="menu--11"
                    aria-haspopup={true}
                    className="caret"
                    data-reach-menu-button=""
                    id="menu-button--menu--11"
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      fill="none"
                      height="7"
                      viewBox="0 0 12 7"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.59523 6.56387C5.7446 6.71053 5.91203 6.7381 6.0001 6.7381C6.09838 6.7381 6.25421 6.71136 6.40443 6.56387L10.9015 1.76778C11.1074 1.5483 11.093 1.20669 10.8695 1.00471C10.6459 0.802637 10.298 0.817297 10.0924 1.03625L5.99993 5.40006L1.90754 1.03625C1.70151 0.816664 1.35357 0.802742 1.13034 1.00471C0.906907 1.20669 0.892512 1.5483 1.09823 1.76778L5.59523 6.56387Z"
                      />
                    </svg>
                    <span
                      className="a11y-only"
                    >
                      show menu for 
                      Test A
                    </span>
                  </button>
                </div>
                <div
                  data-reach-menu=""
                  data-reach-menu-popover=""
                  hidden={true}
                >
                  <div
                    aria-labelledby="menu-button--menu--11"
                    className="header-sub-menu subMenu"
                    data-reach-menu-items=""
                    data-reach-menu-list=""
                    id="menu--11"
                    onKeyDown={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      role="none"
                      tabIndex={-1}
                    >
                      <a
                        className="sub-menu-link menuLink"
                        data-reach-menu-item=""
                        data-reach-menu-link=""
                        data-selected=""
                        data-valuetext=""
                        href="/contentful-a"
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                        role="menuitem"
                        tabIndex={-1}
                      >
                        Contentful a
                      </a>
                    </div>
                    <div
                      role="none"
                      tabIndex={-1}
                    >
                      <a
                        className="sub-menu-link menuLink"
                        data-reach-menu-item=""
                        data-reach-menu-link=""
                        data-selected=""
                        data-valuetext=""
                        href="/contentful-b"
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                        role="menuitem"
                        tabIndex={-1}
                      >
                        Contentful B
                      </a>
                    </div>
                  </div>
                </div>
              </li>
              <li
                className="menuItem"
                role="none"
              >
                <div
                  className="navLabel"
                >
                  <a
                    href="/test-b"
                    onClick={[Function]}
                  >
                    Test B
                  </a>
                </div>
              </li>
            </ul>
          </nav>
        </div>
      </div>
      <div
        className="atlanticBanner"
      >
        <span>
          At
        </span>
         
        <img
          alt="The Atlantic"
          src="test-file-stub"
        />
        <div />
      </div>
    </div>
    <div
      className="container container"
    >
      <div
        className="full"
      >
        <div
          className="titleSubnavContainer"
        >
          <div
            className="title"
          >
            <h1
              className="page-title pageTitle"
            >
              Sample title
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="shutdownBox"
  >
    <div
      className="container container"
    >
      <div
        className="full"
      >
        As of 
        <strong>
          March 7, 2021
        </strong>
         we are
         
        <a
          href="/analysis-updates/giving-thanks-and-looking-ahead-our-data-collection-work-is-done"
        >
          no longer collecting new data
        </a>
        .
         
        <a
          href="/analysis-updates/federal-covid-data-101-how-to-find-data"
        >
          Learn about available federal data
        </a>
        .
      </div>
    </div>
  </div>
</header>
`;

exports[`Components : Layout : Header renders correctly 3`] = `
<header
  className="site-header siteHeader"
>
  <div
    className="container container"
  >
    <div
      className=""
      style={
        Object {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
          "transition": "height 0ms ease-in-out,opacity 0ms ease-in-out,background 0ms ease-in-out",
        }
      }
    >
      <div
        className="mobileMenu"
        style={
          Object {
            "minHeight": "0px",
          }
        }
        tabIndex="-1"
      >
        <nav
          className="js-disabled-block"
          role="navigation"
        >
          <ul
            aria-label="Main"
            className="mobile"
            role="menubar"
          >
            <li
              className="menuItem"
              role="none"
            >
              <div
                className="navLabel"
              >
                <a
                  href="/test-a"
                  onClick={[Function]}
                >
                  Test A
                </a>
                <button
                  aria-controls="menu--17"
                  aria-haspopup={true}
                  className="caret"
                  data-reach-menu-button=""
                  id="menu-button--menu--17"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    fill="none"
                    height="7"
                    viewBox="0 0 12 7"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.59523 6.56387C5.7446 6.71053 5.91203 6.7381 6.0001 6.7381C6.09838 6.7381 6.25421 6.71136 6.40443 6.56387L10.9015 1.76778C11.1074 1.5483 11.093 1.20669 10.8695 1.00471C10.6459 0.802637 10.298 0.817297 10.0924 1.03625L5.99993 5.40006L1.90754 1.03625C1.70151 0.816664 1.35357 0.802742 1.13034 1.00471C0.906907 1.20669 0.892512 1.5483 1.09823 1.76778L5.59523 6.56387Z"
                    />
                  </svg>
                  <span
                    className="a11y-only"
                  >
                    show menu for 
                    Test A
                  </span>
                </button>
              </div>
              <div
                data-reach-menu=""
                data-reach-menu-popover=""
                hidden={true}
              >
                <div
                  aria-labelledby="menu-button--menu--17"
                  className="header-sub-menu subMenu"
                  data-reach-menu-items=""
                  data-reach-menu-list=""
                  id="menu--17"
                  onKeyDown={[Function]}
                  tabIndex={-1}
                >
                  <div
                    role="none"
                    tabIndex={-1}
                  >
                    <a
                      className="sub-menu-link menuLink"
                      data-reach-menu-item=""
                      data-reach-menu-link=""
                      data-selected=""
                      data-valuetext=""
                      href="/contentful-a"
                      onClick={[Function]}
                      onDragStart={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Contentful a
                    </a>
                  </div>
                  <div
                    role="none"
                    tabIndex={-1}
                  >
                    <a
                      className="sub-menu-link menuLink"
                      data-reach-menu-item=""
                      data-reach-menu-link=""
                      data-selected=""
                      data-valuetext=""
                      href="/contentful-b"
                      onClick={[Function]}
                      onDragStart={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Contentful B
                    </a>
                  </div>
                </div>
              </div>
            </li>
            <li
              className="menuItem"
              role="none"
            >
              <div
                className="navLabel"
              >
                <a
                  href="/test-b"
                  onClick={[Function]}
                >
                  Test B
                </a>
              </div>
            </li>
          </ul>
        </nav>
        <div
          className="mobilePointer"
        />
      </div>
    </div>
    <div
      className="wrapper"
    >
      <div
        className="siteTitleContainer"
      >
        <div
          className="siteTitleInner"
        >
          <a
            className="projectLogo"
            href="/"
          >
            <img
              alt="The COVID Tracking Project"
              src="test-file-stub"
              width="176px"
            />
          </a>
        </div>
        =
        <div
          className="navContainer"
        >
          <button
            aria-expanded={false}
            className="mobileToggle"
            onClick={[Function]}
            type="button"
          >
            Menu
          </button>
          <nav
            className="js-disabled-block"
            role="navigation"
          >
            <ul
              aria-label="Main"
              className=""
              role="menubar"
            >
              <li
                className="menuItem"
                role="none"
              >
                <div
                  className="navLabel"
                >
                  <a
                    href="/test-a"
                    onClick={[Function]}
                  >
                    Test A
                  </a>
                  <button
                    aria-controls="menu--19"
                    aria-haspopup={true}
                    className="caret"
                    data-reach-menu-button=""
                    id="menu-button--menu--19"
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      fill="none"
                      height="7"
                      viewBox="0 0 12 7"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.59523 6.56387C5.7446 6.71053 5.91203 6.7381 6.0001 6.7381C6.09838 6.7381 6.25421 6.71136 6.40443 6.56387L10.9015 1.76778C11.1074 1.5483 11.093 1.20669 10.8695 1.00471C10.6459 0.802637 10.298 0.817297 10.0924 1.03625L5.99993 5.40006L1.90754 1.03625C1.70151 0.816664 1.35357 0.802742 1.13034 1.00471C0.906907 1.20669 0.892512 1.5483 1.09823 1.76778L5.59523 6.56387Z"
                      />
                    </svg>
                    <span
                      className="a11y-only"
                    >
                      show menu for 
                      Test A
                    </span>
                  </button>
                </div>
                <div
                  data-reach-menu=""
                  data-reach-menu-popover=""
                  hidden={true}
                >
                  <div
                    aria-labelledby="menu-button--menu--19"
                    className="header-sub-menu subMenu"
                    data-reach-menu-items=""
                    data-reach-menu-list=""
                    id="menu--19"
                    onKeyDown={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      role="none"
                      tabIndex={-1}
                    >
                      <a
                        className="sub-menu-link menuLink"
                        data-reach-menu-item=""
                        data-reach-menu-link=""
                        data-selected=""
                        data-valuetext=""
                        href="/contentful-a"
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                        role="menuitem"
                        tabIndex={-1}
                      >
                        Contentful a
                      </a>
                    </div>
                    <div
                      role="none"
                      tabIndex={-1}
                    >
                      <a
                        className="sub-menu-link menuLink"
                        data-reach-menu-item=""
                        data-reach-menu-link=""
                        data-selected=""
                        data-valuetext=""
                        href="/contentful-b"
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                        role="menuitem"
                        tabIndex={-1}
                      >
                        Contentful B
                      </a>
                    </div>
                  </div>
                </div>
              </li>
              <li
                className="menuItem"
                role="none"
              >
                <div
                  className="navLabel"
                >
                  <a
                    href="/test-b"
                    onClick={[Function]}
                  >
                    Test B
                  </a>
                </div>
              </li>
            </ul>
          </nav>
        </div>
      </div>
      <div
        className="atlanticBanner"
      >
        <span>
          At
        </span>
         
        <img
          alt="The Atlantic"
          src="test-file-stub"
        />
        <div />
      </div>
    </div>
    <div
      className="container container"
    >
      <div
        className="full"
      >
        <div
          className="titleSubnavContainer"
        >
          <div
            className="title"
          >
            <h1
              className="page-title pageTitle"
            >
              <a
                href="/link"
              >
                Sample title
              </a>
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="shutdownBox"
  >
    <div
      className="container container"
    >
      <div
        className="full"
      >
        As of 
        <strong>
          March 7, 2021
        </strong>
         we are
         
        <a
          href="/analysis-updates/giving-thanks-and-looking-ahead-our-data-collection-work-is-done"
        >
          no longer collecting new data
        </a>
        .
         
        <a
          href="/analysis-updates/federal-covid-data-101-how-to-find-data"
        >
          Learn about available federal data
        </a>
        .
      </div>
    </div>
  </div>
</header>
`;

exports[`Components : Layout : Header renders correctly 4`] = `
<header
  className="site-header siteHeader"
>
  <div
    className="container container"
  >
    <div
      className=""
      style={
        Object {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
          "transition": "height 0ms ease-in-out,opacity 0ms ease-in-out,background 0ms ease-in-out",
        }
      }
    >
      <div
        className="mobileMenu"
        style={
          Object {
            "minHeight": "0px",
          }
        }
        tabIndex="-1"
      >
        <nav
          className="js-disabled-block"
          role="navigation"
        >
          <ul
            aria-label="Main"
            className="mobile"
            role="menubar"
          >
            <li
              className="menuItem"
              role="none"
            >
              <div
                className="navLabel"
              >
                <a
                  href="/test-a"
                  onClick={[Function]}
                >
                  Test A
                </a>
                <button
                  aria-controls="menu--23"
                  aria-haspopup={true}
                  className="caret"
                  data-reach-menu-button=""
                  id="menu-button--menu--23"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    fill="none"
                    height="7"
                    viewBox="0 0 12 7"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.59523 6.56387C5.7446 6.71053 5.91203 6.7381 6.0001 6.7381C6.09838 6.7381 6.25421 6.71136 6.40443 6.56387L10.9015 1.76778C11.1074 1.5483 11.093 1.20669 10.8695 1.00471C10.6459 0.802637 10.298 0.817297 10.0924 1.03625L5.99993 5.40006L1.90754 1.03625C1.70151 0.816664 1.35357 0.802742 1.13034 1.00471C0.906907 1.20669 0.892512 1.5483 1.09823 1.76778L5.59523 6.56387Z"
                    />
                  </svg>
                  <span
                    className="a11y-only"
                  >
                    show menu for 
                    Test A
                  </span>
                </button>
              </div>
              <div
                data-reach-menu=""
                data-reach-menu-popover=""
                hidden={true}
              >
                <div
                  aria-labelledby="menu-button--menu--23"
                  className="header-sub-menu subMenu"
                  data-reach-menu-items=""
                  data-reach-menu-list=""
                  id="menu--23"
                  onKeyDown={[Function]}
                  tabIndex={-1}
                >
                  <div
                    role="none"
                    tabIndex={-1}
                  >
                    <a
                      className="sub-menu-link menuLink"
                      data-reach-menu-item=""
                      data-reach-menu-link=""
                      data-selected=""
                      data-valuetext=""
                      href="/contentful-a"
                      onClick={[Function]}
                      onDragStart={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Contentful a
                    </a>
                  </div>
                  <div
                    role="none"
                    tabIndex={-1}
                  >
                    <a
                      className="sub-menu-link menuLink"
                      data-reach-menu-item=""
                      data-reach-menu-link=""
                      data-selected=""
                      data-valuetext=""
                      href="/contentful-b"
                      onClick={[Function]}
                      onDragStart={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Contentful B
                    </a>
                  </div>
                </div>
              </div>
            </li>
            <li
              className="menuItem"
              role="none"
            >
              <div
                className="navLabel"
              >
                <a
                  href="/test-b"
                  onClick={[Function]}
                >
                  Test B
                </a>
              </div>
            </li>
          </ul>
        </nav>
        <div
          className="mobilePointer"
        />
      </div>
    </div>
    <div
      className="wrapper"
    >
      <div
        className="siteTitleContainer"
      >
        <div
          className="siteTitleInner"
        >
          <a
            className="projectLogo"
            href="/"
          >
            <img
              alt="The COVID Tracking Project"
              src="test-file-stub"
              width="176px"
            />
          </a>
        </div>
        =
        <div
          className="navContainer"
        >
          <button
            aria-expanded={false}
            className="mobileToggle"
            onClick={[Function]}
            type="button"
          >
            Menu
          </button>
          <nav
            className="js-disabled-block"
            role="navigation"
          >
            <ul
              aria-label="Main"
              className=""
              role="menubar"
            >
              <li
                className="menuItem"
                role="none"
              >
                <div
                  className="navLabel"
                >
                  <a
                    href="/test-a"
                    onClick={[Function]}
                  >
                    Test A
                  </a>
                  <button
                    aria-controls="menu--25"
                    aria-haspopup={true}
                    className="caret"
                    data-reach-menu-button=""
                    id="menu-button--menu--25"
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      fill="none"
                      height="7"
                      viewBox="0 0 12 7"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.59523 6.56387C5.7446 6.71053 5.91203 6.7381 6.0001 6.7381C6.09838 6.7381 6.25421 6.71136 6.40443 6.56387L10.9015 1.76778C11.1074 1.5483 11.093 1.20669 10.8695 1.00471C10.6459 0.802637 10.298 0.817297 10.0924 1.03625L5.99993 5.40006L1.90754 1.03625C1.70151 0.816664 1.35357 0.802742 1.13034 1.00471C0.906907 1.20669 0.892512 1.5483 1.09823 1.76778L5.59523 6.56387Z"
                      />
                    </svg>
                    <span
                      className="a11y-only"
                    >
                      show menu for 
                      Test A
                    </span>
                  </button>
                </div>
                <div
                  data-reach-menu=""
                  data-reach-menu-popover=""
                  hidden={true}
                >
                  <div
                    aria-labelledby="menu-button--menu--25"
                    className="header-sub-menu subMenu"
                    data-reach-menu-items=""
                    data-reach-menu-list=""
                    id="menu--25"
                    onKeyDown={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      role="none"
                      tabIndex={-1}
                    >
                      <a
                        className="sub-menu-link menuLink"
                        data-reach-menu-item=""
                        data-reach-menu-link=""
                        data-selected=""
                        data-valuetext=""
                        href="/contentful-a"
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                        role="menuitem"
                        tabIndex={-1}
                      >
                        Contentful a
                      </a>
                    </div>
                    <div
                      role="none"
                      tabIndex={-1}
                    >
                      <a
                        className="sub-menu-link menuLink"
                        data-reach-menu-item=""
                        data-reach-menu-link=""
                        data-selected=""
                        data-valuetext=""
                        href="/contentful-b"
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                        role="menuitem"
                        tabIndex={-1}
                      >
                        Contentful B
                      </a>
                    </div>
                  </div>
                </div>
              </li>
              <li
                className="menuItem"
                role="none"
              >
                <div
                  className="navLabel"
                >
                  <a
                    href="/test-b"
                    onClick={[Function]}
                  >
                    Test B
                  </a>
                </div>
              </li>
            </ul>
          </nav>
        </div>
      </div>
      <div
        className="atlanticBanner"
      >
        <span>
          At
        </span>
         
        <img
          alt="The Atlantic"
          src="test-file-stub"
        />
        <div />
      </div>
    </div>
    <div
      className="container container"
    >
      <div
        className="full"
      >
        <div
          className="titleSubnavContainer"
        >
          <div
            className="title"
          >
            <h1
              className="page-title pageTitle"
            >
              Sample title
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="shutdownBox"
  >
    <div
      className="container container"
    >
      <div
        className="full"
      >
        As of 
        <strong>
          March 7, 2021
        </strong>
         we are
         
        <a
          href="/analysis-updates/giving-thanks-and-looking-ahead-our-data-collection-work-is-done"
        >
          no longer collecting new data
        </a>
        .
         
        <a
          href="/analysis-updates/federal-covid-data-101-how-to-find-data"
        >
          Learn about available federal data
        </a>
        .
      </div>
    </div>
  </div>
</header>
`;

exports[`Components : Layout : Header renders correctly 5`] = `
<header
  className="site-header siteHeader"
>
  <div
    className="container container"
  >
    <div
      className=""
      style={
        Object {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
          "transition": "height 0ms ease-in-out,opacity 0ms ease-in-out,background 0ms ease-in-out",
        }
      }
    >
      <div
        className="mobileMenu"
        style={
          Object {
            "minHeight": "0px",
          }
        }
        tabIndex="-1"
      >
        <nav
          className="js-disabled-block"
          role="navigation"
        >
          <ul
            aria-label="Main"
            className="mobile"
            role="menubar"
          >
            <li
              className="menuItem"
              role="none"
            >
              <div
                className="navLabel"
              >
                <a
                  href="/test-a"
                  onClick={[Function]}
                >
                  Test A
                </a>
                <button
                  aria-controls="menu--29"
                  aria-haspopup={true}
                  className="caret"
                  data-reach-menu-button=""
                  id="menu-button--menu--29"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    fill="none"
                    height="7"
                    viewBox="0 0 12 7"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.59523 6.56387C5.7446 6.71053 5.91203 6.7381 6.0001 6.7381C6.09838 6.7381 6.25421 6.71136 6.40443 6.56387L10.9015 1.76778C11.1074 1.5483 11.093 1.20669 10.8695 1.00471C10.6459 0.802637 10.298 0.817297 10.0924 1.03625L5.99993 5.40006L1.90754 1.03625C1.70151 0.816664 1.35357 0.802742 1.13034 1.00471C0.906907 1.20669 0.892512 1.5483 1.09823 1.76778L5.59523 6.56387Z"
                    />
                  </svg>
                  <span
                    className="a11y-only"
                  >
                    show menu for 
                    Test A
                  </span>
                </button>
              </div>
              <div
                data-reach-menu=""
                data-reach-menu-popover=""
                hidden={true}
              >
                <div
                  aria-labelledby="menu-button--menu--29"
                  className="header-sub-menu subMenu"
                  data-reach-menu-items=""
                  data-reach-menu-list=""
                  id="menu--29"
                  onKeyDown={[Function]}
                  tabIndex={-1}
                >
                  <div
                    role="none"
                    tabIndex={-1}
                  >
                    <a
                      className="sub-menu-link menuLink"
                      data-reach-menu-item=""
                      data-reach-menu-link=""
                      data-selected=""
                      data-valuetext=""
                      href="/contentful-a"
                      onClick={[Function]}
                      onDragStart={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Contentful a
                    </a>
                  </div>
                  <div
                    role="none"
                    tabIndex={-1}
                  >
                    <a
                      className="sub-menu-link menuLink"
                      data-reach-menu-item=""
                      data-reach-menu-link=""
                      data-selected=""
                      data-valuetext=""
                      href="/contentful-b"
                      onClick={[Function]}
                      onDragStart={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Contentful B
                    </a>
                  </div>
                </div>
              </div>
            </li>
            <li
              className="menuItem"
              role="none"
            >
              <div
                className="navLabel"
              >
                <a
                  href="/test-b"
                  onClick={[Function]}
                >
                  Test B
                </a>
              </div>
            </li>
          </ul>
        </nav>
        <div
          className="mobilePointer"
        />
      </div>
    </div>
    <div
      className="wrapper"
    >
      <div
        className="siteTitleContainer"
      >
        <div
          className="siteTitleInner"
        >
          <a
            className="projectLogo"
            href="/"
          >
            <img
              alt="The COVID Tracking Project"
              src="test-file-stub"
              width="176px"
            />
          </a>
        </div>
        =
        <div
          className="navContainer"
        >
          <button
            aria-expanded={false}
            className="mobileToggle"
            onClick={[Function]}
            type="button"
          >
            Menu
          </button>
          <nav
            className="js-disabled-block"
            role="navigation"
          >
            <ul
              aria-label="Main"
              className=""
              role="menubar"
            >
              <li
                className="menuItem"
                role="none"
              >
                <div
                  className="navLabel"
                >
                  <a
                    href="/test-a"
                    onClick={[Function]}
                  >
                    Test A
                  </a>
                  <button
                    aria-controls="menu--31"
                    aria-haspopup={true}
                    className="caret"
                    data-reach-menu-button=""
                    id="menu-button--menu--31"
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      fill="none"
                      height="7"
                      viewBox="0 0 12 7"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.59523 6.56387C5.7446 6.71053 5.91203 6.7381 6.0001 6.7381C6.09838 6.7381 6.25421 6.71136 6.40443 6.56387L10.9015 1.76778C11.1074 1.5483 11.093 1.20669 10.8695 1.00471C10.6459 0.802637 10.298 0.817297 10.0924 1.03625L5.99993 5.40006L1.90754 1.03625C1.70151 0.816664 1.35357 0.802742 1.13034 1.00471C0.906907 1.20669 0.892512 1.5483 1.09823 1.76778L5.59523 6.56387Z"
                      />
                    </svg>
                    <span
                      className="a11y-only"
                    >
                      show menu for 
                      Test A
                    </span>
                  </button>
                </div>
                <div
                  data-reach-menu=""
                  data-reach-menu-popover=""
                  hidden={true}
                >
                  <div
                    aria-labelledby="menu-button--menu--31"
                    className="header-sub-menu subMenu"
                    data-reach-menu-items=""
                    data-reach-menu-list=""
                    id="menu--31"
                    onKeyDown={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      role="none"
                      tabIndex={-1}
                    >
                      <a
                        className="sub-menu-link menuLink"
                        data-reach-menu-item=""
                        data-reach-menu-link=""
                        data-selected=""
                        data-valuetext=""
                        href="/contentful-a"
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                        role="menuitem"
                        tabIndex={-1}
                      >
                        Contentful a
                      </a>
                    </div>
                    <div
                      role="none"
                      tabIndex={-1}
                    >
                      <a
                        className="sub-menu-link menuLink"
                        data-reach-menu-item=""
                        data-reach-menu-link=""
                        data-selected=""
                        data-valuetext=""
                        href="/contentful-b"
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                        role="menuitem"
                        tabIndex={-1}
                      >
                        Contentful B
                      </a>
                    </div>
                  </div>
                </div>
              </li>
              <li
                className="menuItem"
                role="none"
              >
                <div
                  className="navLabel"
                >
                  <a
                    href="/test-b"
                    onClick={[Function]}
                  >
                    Test B
                  </a>
                </div>
              </li>
            </ul>
          </nav>
        </div>
      </div>
      <div
        className="atlanticBanner"
      >
        <span>
          At
        </span>
         
        <img
          alt="The Atlantic"
          src="test-file-stub"
        />
        <div />
      </div>
    </div>
    <div
      className="container container"
    >
      <div
        className="centered narrow"
      >
        <div
          className="titleSubnavContainer"
        >
          <div
            className="title"
          >
            <h1
              className="page-title pageTitle"
            >
              Sample title
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="shutdownBox"
  >
    <div
      className="container container"
    >
      <div
        className="full"
      >
        As of 
        <strong>
          March 7, 2021
        </strong>
         we are
         
        <a
          href="/analysis-updates/giving-thanks-and-looking-ahead-our-data-collection-work-is-done"
        >
          no longer collecting new data
        </a>
        .
         
        <a
          href="/analysis-updates/federal-covid-data-101-how-to-find-data"
        >
          Learn about available federal data
        </a>
        .
      </div>
    </div>
  </div>
</header>
`;
